fix: update spacing

--- a/src/stylus/components/_expansion-panel.styl
+++ b/src/stylus/components/_expansion-panel.styl
@@ -26,6 +26,7 @@ theme(v-expansion-panel, "v-expansion-panel")
   z-index: 1
 
   &__activator
+    cursor: pointer
     display: flex
     transition: $primary-transition
 
@@ -33,7 +34,6 @@ theme(v-expansion-panel, "v-expansion-panel")
       padding: 0 0 0 0
 
   &__container
-    cursor: pointer
     flex: 1 0 100%
     padding: 0 24px
     max-width: 100%
@@ -62,13 +62,17 @@ theme(v-expansion-panel, "v-expansion-panel")
       transition: opacity $primary-transition
 
     &--active
-      margin: $spacers.three.y 0
+      &:not(:first-child)
+        margin-top: $spacers.three.y
 
       &::after
         opacity: 0
 
-      + .v-expansion-panel__container::after
-        opacity: 0
+      + .v-expansion-panel__container
+        margin-top: $spacers.three.y
+
+        &::after
+          opacity: 0
 
       .v-expansion-panel__container::before
         elevation(3)
@@ -86,41 +90,22 @@ theme(v-expansion-panel, "v-expansion-panel")
   &__icon
     align-items: center
     align-self: center
-    // undecided
-    // margin-bottom: 0
-    // margin-top: 0
     margin-left: auto
-    padding-right: 16px
-
-  &__body
-    transition: $primary-transition
-
-    .v-card
-      border-radius: 0
-      elevation(0)
 
   &--popout,
   &--popin,
   &--inset
-    .v-expansion-panel__container
-      &--active
-        &:before
-          opacity: 0
-
-        &:after,
-        + .v-expansion-panel__container:after
-          opacity: 0
+    .v-expansion-panel__container--active::before
+      opacity: 0
 
   &--popout,
   &--inset
-    .v-expansion-panel__container
-      &--active
-        margin: $spacers.three.x
+    .v-expansion-panel__container--active
+      margin: $spacers.three.x
 
   &--popin
-    .v-expansion-panel__container
-      &--active
-        margin: $spacers.three.y 0
+    .v-expansion-panel__container--active
+      margin: $spacers.three.y 0
 
   &--popout
     .v-expansion-panel__container
